Started seperating functions out for code readability, fixed multipble binding bug

--- a/public/assets/css/grid.css
+++ b/public/assets/css/grid.css
@@ -22,3 +22,12 @@
 	width: 150px;
 	position: fixed;
 }
+
+.blink {
+  animation: blinker 1s linear infinite;
+}
+@keyframes blinker {
+  50% {
+    opacity: 0.0;
+  }
+}
